# Sycl-MapReduce-CPU-GPU-Hybrid

./: .gitignore  CMakeLists.txt  README.md  compileflags.txt  execute.sh  executedebug.sh  runprogram.sh  verifyme.txt
dataset/compressed/: .gitattributes  decompressor.sh
dataset/uncompressed/: assembly_data_report.jsonl  data_summary.tsv  dataset_catalog.json  md5sum.txt  modifier.sh
scripts/: attemptwriter.sh  decompressor.sh  measure.sh  measyrepy.py  modifier.sh  outcleaner.sh  paramplotter.py  plotter.py  solutiongenerator.py  testsuite.sh  truncator.sh  verifier.py
scripts/old/: measure.sh
src/: helper.cpp  helper.h  main  main.cpp
src/CPU_Module/: CPU.cpp  CPU.h
src/GPU_Module/: GPU.cpp  GPU.h
src/Hybrid_CPU_GPU/: Hybrid.cpp  Hybrid.h
